tests/end_to_end/candid_rpc/class_syntax/rejections/src/some_canister/index.ts
import {
    bool,
    Canister,
    empty,
    ic,
    Manual,
    query,
    text
} from 'azle/experimental';

export default class {
    @query([text], empty, { manual: true})
    reject(message){
            ic.reject(message);
        },
        { manual: true }
    ),

@query([], bool)
    accept(){
        return true;
    }),
    @query([], empty, { manual: true})
    error(){
            // This errors because neither ic.reject nor ic.reply were called
        },
        { manual: true }
    )
}
